@@ -10,6 +10,8 @@ This file lists the incompatible changes between Version 2.x and older versions
   - renamed buchnarrow -> bnfnarrow
   - removed useless argument nf in ZC_nfval, ZC_nfvalrem, pr_equal, ZC_prdvd
   - prototype of FlxX_shift has changed
+  - renamed FpX_fromdigits -> FpXV_FpX_fromdigits
+  - renamed FpXQX_fromdigits -> FpXQXV_FpXQX_fromdigits
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%% VERSION 2.8 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
