@@ -4953,7 +4953,7 @@ Not stack-clean. Note that $t$ need not be the same variable as $Y$!
 
 \fun{GEN}{FpXQX_digits}{GEN x, GEN B, GEN T, GEN p}
 
-\fun{GEN}{FpXQX_fromdigits}{GEN v, GEN B, GEN T, GEN p}
+\fun{GEN}{FpXQXV_FpXQX_fromdigits}{GEN v, GEN B, GEN T, GEN p}
 
 \fun{GEN}{FpXQX_invBarrett}{GEN y, GEN T, GEN p} returns the Barrett inverse of
 the \kbd{FpXQX} $y$, namely a lift of $1/\kbd{polrecip}(y)+O(x^{\deg(y)-1})$.
