@@ -696,7 +696,6 @@ GEN     FpXQX_div_by_X_x(GEN a, GEN x, GEN T, GEN p, GEN *pr);
 GEN     FpXQX_divrem(GEN x, GEN y, GEN T, GEN p, GEN *pr);
 GEN     FpXQX_digits(GEN x, GEN B, GEN T, GEN p);
 GEN     FpXQX_extgcd(GEN x, GEN y, GEN T, GEN p, GEN *ptu, GEN *ptv);
-GEN     FpXQX_fromdigits(GEN x, GEN B, GEN T, GEN p);
 GEN     FpXQX_gcd(GEN P, GEN Q, GEN T, GEN p);
 GEN     FpXQX_get_red(GEN S, GEN T, GEN p);
 GEN     FpXQX_halfgcd(GEN x, GEN y, GEN T, GEN p);
@@ -717,6 +716,7 @@ GEN     FpXQXQ_sqr(GEN x, GEN S, GEN T, GEN p);
 GEN     FpXQXQV_autpow(GEN aut, long n, GEN S, GEN T, GEN p);
 GEN     FpXQXQV_autsum(GEN aut, long n, GEN S, GEN T, GEN p);
 GEN     FpXQXQV_auttrace(GEN aut, long n, GEN S, GEN T, GEN p);
+GEN     FpXQXV_FpXQX_fromdigits(GEN x, GEN B, GEN T, GEN p);
 GEN     FpXQXV_prod(GEN V, GEN Tp, GEN p);
 GEN     FpXX_Fp_mul(GEN x, GEN y, GEN p);
 GEN     FpXX_FpX_mul(GEN x, GEN y, GEN p);
